Updated demo to test links in multiple sections.

--- a/demo.html
+++ b/demo.html
@@ -28,9 +28,9 @@
         <div id="demo-data">
             <a href="#" class="section1">Section 1 Link 1</a>
             <a href="#" class="section1">Section 1 Link 2</a>
-            <a href="#" class="section2">Section 2 Link 1</a>
+            <a href="#" class="section2 section1">Section 2 Link 1</a>
             <a href="#" class="section2">Section 2 Link 2</a>
-            <a href="#" class="section3">Section 3 Link 1</a>
+            <a href="#" class="section3 section4">Section 3 Link 1</a>
             <a href="#" class="section3">Section 3 Link 2</a>
             <a href="#" class="section4">Section 4 Link 1</a>
             <a href="#" class="section4">Section 4 Link 2</a>
